--- a/views/user_Profile.ejs
+++ b/views/user_Profile.ejs
@@ -4,5 +4,20 @@
     Codeial / Profile Page
 </h1>
 
-<p>Name: <%=user.name%></p>
-<p>Email: <%=user.email%></p>
+
+
+<% if(user.id == profile_user.id) {%>
+
+    <form action="/users/update/<%=profile_user.id%>" method="post">
+        <input type="text" name="name" placeholder="Your name" value="<%=profile_user.name%>" required>
+        <input type="text" name="email" placeholder="Your Email" value="<%=profile_user.email%>" required>
+        <input type="submit" value="update">
+    </form>
+
+    <%}else{%>
+        <p>Name: <%=profile_user.name%></p>
+        <p>Email: <%=profile_user.email%></p>
+
+
+
+    <%}%>
